--- a/assets/css/presenter.css
+++ b/assets/css/presenter.css
@@ -9,20 +9,6 @@
 		padding: 0;
 	}
 
-.drop-area {
-	border: 4px dashed var(--color-grey);
-	border-radius: 20px;
-	padding: 40px;
-	text-align: center;
-	color: var(--color-grey);
-}
-
-	.drop-area.active {
-		border-style: solid;
-		border-color: var(--color-highlight);
-		color: var(--color-highlight);
-	}
-
 .gallery {
 	margin: 40px 0;
 	list-style-type: none;
@@ -36,6 +22,7 @@
 
 	.gallery li {
 		display: inline-block;
+		position: relative;
 	}
 
 		.gallery label {
@@ -44,6 +31,8 @@
 			padding: 10px;
 			border-radius: 10px;
 			cursor: pointer;
+			box-sizing: border-box;
+			height: 100%;
 		}
 
 			.gallery li label:hover {
@@ -64,12 +53,26 @@
 
 			.gallery li .element-title.no-image {
 				width: 200px;
-				min-height: 200px;
+				min-height: 220px;
 				text-align: center;
 				color: var(--color-grey);
 				display: flex;
 				justify-content: center;
 				align-items: center;
+			}
+
+			.gallery li .remove-button {
+				position: absolute;
+				right: 0;
+				top: 0;
+				z-index: 5;
+			}
+
+			.gallery li input[type="radio"] {
+				opacity: 0;
+				position: absolute;
+				width: 0;
+				height: 0;
 			}
 
 		.gallery img {
@@ -78,4 +81,22 @@
 			height: 200px;
 			width: auto;
 			border-radius: 3px;
+		}
+
+	.gallery li.drop-area {
+		border: 4px dashed var(--color-grey);
+		border-radius: 20px;
+		padding: 40px;
+		text-align: center;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		color: var(--color-grey);
+		flex-grow: 1;
+	}
+
+		.gallery li.drop-area.active {
+			border-style: solid;
+			border-color: var(--color-highlight);
+			color: var(--color-highlight);
 		}
