--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -1,5 +1,7 @@
 :root {
 	--color-grey: #999;
 	--color-grey-light: #ddd;
-	--color-highlight: #009;
+	--color-highlight: #33e;
+	--color-white: #fff;
+	--color-black: #000;
 }
